# monel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  PROJECT-SUMMARY.md  PROMPT-FOR-AI-UI.md  README-FRONTEND.md  README.md  SCREENSHOTS.md  TAURI-README.md  USAGE.md  config.yaml  run.bat  start.bat  start.sh  tauri-dev.bat
.cargo/: config.toml
.github/workflows/: win-build.yml
docs/archive/: CHECKLIST.md  DEPLOYMENT.md  FIXES-SUMMARY.md  QUICKSTART.md  TAURI-COMPLETION.md  WINDOWS-FIX.md
page/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  admin.html  index.html
src/: admin.rs  aggregator.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  proxy.rs  state.rs  stats.rs
src-tauri/: Cargo.toml  config.yaml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: app.css  app.js  index.html  index.html.bak
